--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
-.title {
+/* .title {
     size: 30px;
-}
+} */
+
+/* body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  padding: 1rem;
+  text-align: center;
+} */
+
+/* body {
+  padding: 1rem;
+  text-align: center;
+} */
+/* 
+body {
+  padding: 1rem;
+  text-align: center;
+} */
+/* 
+.form {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 32px;
+} */
+
+/* #btn {
+  padding: 1rem;
+  text-align: center;
+} */
+
